fix: add missing container to fix alignment

--- a/style.css
+++ b/style.css
@@ -1,5 +1,44 @@
 @font-face {
     font-family: "IBM Plex Sans Devanagari";
+    src:url(fonts/IBMPlexSansDevanagari-Thin.woff2) format("woff2");
+    font-weight: 700;
+    font-style: normal;
+}
+@font-face {
+    font-family: "IBM Plex Sans Devanagari";
+    src:url(fonts/IBMPlexSansDevanagari-SemiBold.woff2) format("woff2");
+    font-weight: 600;
+    font-style: normal;
+}
+@font-face {
+    font-family: "IBM Plex Sans Devanagari";
+    src:url(fonts/IBMPlexSansDevanagari-Medium.woff2) format("woff2");
+    font-weight: 500;
+    font-style: normal;
+}
+@font-face {
+    font-family: "IBM Plex Sans Devanagari";
+    src:url(fonts/IBMPlexSansDevanagari-Regular.woff2) format("woff2");
+    font-weight: 400;
+    font-style: normal;
+}
+@font-face {
+    font-family: "IBM Plex Sans Devanagari";
+    src:url(fonts/IBMPlexSansDevanagari-Light.woff2) format("woff2");
+    font-weight: 300;
+    font-style: normal;
+}
+@font-face {
+    font-family: "IBM Plex Sans Devanagari";
+    src:url(fonts/IBMPlexSansDevanagari-ExtraLight.woff2) format("woff2");
+    font-weight: 200;
+    font-style: normal;
+}
+@font-face {
+    font-family: "IBM Plex Sans Devanagari";
+    src:url(fonts/IBMPlexSansDevanagari-Light.woff2) format("woff2");
+    font-weight: 100;
+    font-style: normal;
 }
 html {
     box-sizing: border-box;
@@ -10,4 +49,10 @@ html {
 body{
     font-family: "IBM Plex Sans Devanagari", sans-serif;
     margin: 0;
+}
+.container {
+    max-width: 1920px;
+    width: 100%;
+    margin: 0 auto;
+    padding: 50px;
 }
